# Statusbar-Dwm

./: .gitignore  Cargo.toml  Makefile  README.md  vol.sh
.github/workflows/: rust.yml
src/: cpu.rs  main.rs  stats.rs  volume.rs  x11.rs
volume-mixer/: Cargo.toml
volume-mixer/src/: main.rs
