[package]
name = "statusbar"
version = "0.1.0"
edition = "2021"
authors = ["Emanuel Aviles - Statusbar - inspiration GamozoLabs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23"  # Check for the latest version on crates.io
chrono = "0.4"    # Ensure you have chrono as well
#chrono = "*"

